Fixed mobile ui errors regarding game details left align and scrollbar.

--- a/src/sass/components/_gamesDetail.scss
+++ b/src/sass/components/_gamesDetail.scss
@@ -9,18 +9,18 @@
   z-index: 12;
   &::-webkit-scrollbar {
     width: 0.5rem;
-    background-color: $peach;
-    -webkit-background-color: $peach;
+    background-color: $peach !important;
+    -webkit-background-color: $peach !important;
   }
   &::-webkit-scrollbar-thumb {
-    background-color: $peach;
-    -webkit-background-color: $peach;
+    background-color: $peach !important;
+    -webkit-background-color: $peach !important;
     border-radius: 20px;
   }
   &::-webkit-scrollbar-track {
     border-radius: 20px;
-    background-color: $teal;
-    -webkit-background-color: $teal;
+    background-color: $teal !important;
+    -webkit-background-color: $teal !important;
   }
 }
 
@@ -79,7 +79,7 @@
 @media (min-width: $smBreakpoint) and (max-width: $mdBreakpoint) {
   .detail {
     width: 85%;
-    left: 0;
+    left: 8%;
     padding: 2rem 1rem;
 
     svg {
